# pyofss

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
doc/: Makefile  conf.py  domain.rst  fibre.rst  gaussian.rst  index.rst  installation.rst  overview.rst  reference.rst  system.rst  tutorial.rst
examples/: README  run_examples.py
examples/agrawal_book/: fig_3-1.py  fig_3-3.py  fig_3-4.py  fig_3-6.py  fig_3-7.py  fig_3_1.py  fig_3_3.py  fig_3_4.py  fig_3_6.py  fig_3_7.py  fig_4-11.py  fig_4-12.py  fig_4-13.py  fig_4-15.py  fig_4-16.py  fig_4-19.py  fig_4-20.py  fig_4-21.py  fig_4-23.py  fig_4-4.py  fig_4-5.py  fig_4-8.py  fig_4-9.py  fig_4_11.py  fig_4_12.py  fig_4_13.py  fig_4_15.py  fig_4_16.py  fig_4_19.py  fig_4_20.py  fig_4_21.py  fig_4_23.py  fig_4_4.py  fig_4_5.py  fig_4_8.py  fig_4_9.py  fig_5-18.py  fig_5-21.py  fig_5-6.py  fig_5-8.py  (+18 more)
examples/second_order_soliton/: soliton.py  soliton_adaptive.py
examples/soliton_collision/: soliton_collision.py
examples/verification/: frequency_and_wavelength.py  gaussian_various_parameters.py
pyofss/: __init__.py  domain.py  field.py  metrics.py  system.py
pyofss/modules/: amplifier.py  bit.py  cw.py  fibre.py  filter.py  gaussian.py  generator.py  linearity.py  nonlinearity.py  opencl_fibre.py  plotter.py  sech.py  solver.py  stepper.py  storage.py
pyofss/tests/: test_domain.py  test_fibre.py  test_filter.py  test_gaussian.py  test_linearity.py  test_nonlinearity.py  test_sech.py  test_solver.py  test_stepper.py
