
[metadata]
name = pyofss
version = 0.9
license = GNU GPL
platform = POSIX
author = David Bolt (daibo)
author-email = djb@curvedthoughts.com
home-page = http://curvedthoughts.com/pyofss
download-url = http://pypi.python.org/pypi/pyofss
summary = Optical fibre system simulator
keywords = photonic simulation fiber fibre optical
description-file = README
classifiers = 
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Science/Research
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Operating System :: POSIX :: Linux
   Programming Language :: Python
   Programming Language :: Python :: 2.6
   Programming Language :: Python :: 2.7
   Topic :: Scientific/Engineering :: Physics
requires-dist = numpy scipy matplotlib

[files]
packages = 
   pyofss
   pyofss/modules
   pyofss/tests
extra_files = 
   setup.py
   README
resources = 
   doc/* = {doc}

[nosetests]
where = pyofss/tests

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
